--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -77,9 +77,9 @@
     }
     .project-description
     {
+        font-family: monospace;
         margin: 0.5vh;
         color: #804c39;
-        font-size: 80%;
     }
 
     #bonfire-background
