ember and kiln showcase

--- a/src/projects/index.html
+++ b/src/projects/index.html
@@ -199,6 +199,18 @@
         </div>
         <div class="project-container">
             <div class="project">
+                <a href="https://github.com/Caleb-Kronstad/Ember" target="_blank"><img class="project-image" src="../resources/ember.gif"></a>
+                <a href="https://github.com/Caleb-Kronstad/Ember" class="project-title" target="_blank">Ember (WIP)</a>
+                <p class="project-description">An audio player with basic features made using C++ and Kiln</p>
+            </div>
+            <div class="project">
+                <a href="https://github.com/Caleb-Kronstad/Kiln" target="_blank"><img class="project-image" src="../resources/kiln.gif"></a>
+                <a href="https://github.com/Caleb-Kronstad/Kiln" class="project-title" target="_blank">Kiln</a>
+                <p class="project-description">A minimal graphics framework that bundles GLFW, GLAD, and Dear ImGui into a simple, easy-to-use API</p>
+            </div>
+        </div>
+        <div class="project-container">
+            <div class="project">
                 <a href="nifty-engine/index.html" target="_blank"><img class="project-image" src="../resources/nifty.gif"></a>
                 <a href="nifty-engine/index.html" class="project-title" target="_blank">Nifty Engine</a>
                 <p class="project-description">A 3D game engine made using C++ and OpenGL, with a focus on user interaction and experience</p>
